<resources>
    <string name="app_name" translatable="false">防沉迷时间管理</string>
    <string name="title_section1" translatable="false">日程</string>
    <string name="title_section2" translatable="false">详情</string>
    <string name="title_section3" translatable="false">我的</string>
    <string name="action_settings" translatable="false">设置</string>
    <string name="action_search" translatable="false">搜索</string>
    <string name="action_new" translatable="false">新建</string>
    <string name="action_refresh" translatable="false">刷新</string>
    <string name="action_edit" translatable="false">编辑</string>
    <string name="action_reset" translatable="false">清除</string>
    <string name="action_ok" translatable="false">完成</string>
    <string name="action_login" translatable="false">登录</string>
    <string name="action_logout" translatable="false">退出系统</string>
    <string name="button_ok" translatable="false">确定</string>
    <string name="menu_help" translatable="false">帮助</string>
    <string name="menu_history" translatable="false">历史</string>
    <string name="menu_settings" translatable="false">设置</string>
    <string name="wifi_changing_network" translatable="false">请求连接到网络\u2026</string>
    <string name="title_ex_edit1" translatable="false">基本信息</string>
    <string name="title_ex_edit2" translatable="false">扩展信息</string>
    <string name="schedule_title" translatable="false">请输入日程标题</string>
    <string name="schedule_content" translatable="false">请输入日程内容</string>
    <string name="isSignificance" translatable="false">重要</string>
    <string name="isEmergency" translatable="false">紧急</string>
    <string name="submit" translatable="false">提交</string>
    <string name="reset" translatable="false">取消</string>
    <string name="query" translatable="false">查询</string>
    <string name="title_activity_schedule_query" translatable="false">ScheduleQueryActivity</string>
    <string name="title_activity_schedule_edit" translatable="false">ScheduleEditActivity</string>
    <string name="title_activity_schedule_list" translatable="false">ScheduleListActivity</string>
    <string name="setting_privacy_head" translatable="false"><b>隐私条款</b></string>
    <string name="setting_privacy_content" translatable="false">
        \n\t本应用尊重并保护所有使用服务用户的个人隐私权。为了给您提供更准确、更有个性化的服务，本应用会按照本隐私权政策的规定使用和披露您的个人信息。但本应用将以高度的勤勉、审慎义务对待这些信息。除本隐私权政策另有规定外，在未征得您事先许可的情况下，本应用不会将这些信息对外披露或向第三方提供。本应用会不时更新本隐私权政策。 您在同意本应用服务使用协议之时，即视为您已经同意本隐私权政策全部内容。本隐私权政策属于本应用服务使用协议不可分割的一部分。
        \n<b>一.适用范围</b>
        \n\t1. 在您浏览使用本应用时，本应用自动接收并记录您的信息，包括但不限于您使用频次、偏好、使用的语言、访问日期和时间等数据；
        \n\t2. 本应用通过合法途径取得的用户个人数据。您了解并同意，以下信息不适用本隐私权政策；您在使用本应用平台提供的搜索服务时输入的关键字信息；
        \n\t3. 本应用收集到的您在本应用发布的有关信息数据；
        \n\t4. 违反法律规定或违反本应用规则行为及本应用已对您采取的措施。
        \n<b>二.信息使用</b>
        \n\t1. 本应用不会向任何无关第三方提供、出售、出租、分享或交易您的个人信息，除非事先得到您的许可，或该第三方和本应用（含本应用关联公司）单独或共同为您提供服务，且在该服务结束后，其将被禁止访问包括其以前能够访问的所有这些资料;
        \n\t2. 本应用亦不允许任何第三方以任何手段收集、编辑、出售或者无偿传播您的个人信息。任何本应用平台用户如从事上述活动，一经发现，本应用有权立即终止与该用户的服务协议;
        \n\t3. 为服务用户的目的，本应用可能通过使用您的个人信息，向您提供您感兴趣的信息，包括但不限于向您发出产品和服务信息，或者与本应用合作伙伴共享信息以便他们向您发送有关其产品和服务的信息（后者需要您的事先同意）。
        \n<b>三.信息披露</b>
        \n\t在如下情况下，本应用将依据您的个人意愿或法律的规定全部或部分的披露您的个人信息：
        \n\t1. 经您事先同意，向第三方披露；
        \n\t2. 为提供您所要求的产品和服务，而必须和第三方分享您的个人信息；
        \n\t3. 根据法律的有关规定，或者行政或司法机构的要求，向第三方或者行政、司法机构披露；
        \n\t4. 如您出现违反中国有关法律、法规或者本应用服务协议或相关规则的情况，需要向第三方披露；
        \n\t5. 如您是适格的知识产权投诉人并已提起投诉，应被投诉人要求，向被投诉人披露，以便双方处理可能的权利纠纷；
        \n\t6. 其它本应用根据法律、法规或者网站政策认为合适的披露。
        \n<b>四.信息存储和交换本</b>
        \n\t应用收集的有关您的信息和资料将保存在本应用及（或）其关联公司的服务器上，这些信息和资料可能传送至您所在国家、地区或本应用收集信息和资料所在地的境外并在境外被访问、存储和展示。
        \n<b>五.信息安全</b>
        \n\t1. 本应用帐号均有安全保护功能，请妥善保管您的用户名及密码信息。本应用将通过对用户密码进行加密等安全措施确保您的信息不丢失，不被滥用和变造。尽管有前述安全措施，但同时也请您注意在信息网络上不存在“完善的安全措施”；
        \n\t2. 在使用本应用网络服务进行网上交易时，您不可避免的要向交易对方或潜在的交易对方披露自己的个人信息，如联络方式或者邮政地址。请您妥善保护自己的个人信息，仅在必要的情形下向他人提供。如您发现自己的个人信息泄密，尤其是本应用用户名及密码发生泄露，请您立即联络本应用客服，以便本应用采取相应措施。
    </string>
    <string name="setting_use_head" translatable="false"><b>使用条款</b></string>
    <string name="setting_use_content" translatable="false">
        \n<b>1.接受条款</b>
        \n\t惜时手机应用（以下简称“本APP”）根据以下服务条款为您提供服务。这些条款可由我方随时更新，且毋须另行通知。小目标小行动使用协议（以下简称“使用协议”）一旦发生变动，将在本APP上公布修改内容或内容链接。修改后的使用协议一旦公布，即有效代替原来的使用协议。您在使用本APP提供的各项服务之前，应仔细阅读本使用协议。如您不同意本使用协议及/或随时对其的修改，请您立即停止使用我方所提供的全部服务；您一旦使用本服务，即视为您已了解并完全同意本使用协议各项内容，包括我方对使用协议随时所做的任何修改，并成为本APP用户（以下简称“用户”）。
        \n<b>2.遵守法律</b>
        \n\t您同意遵守中华人民共和国相关法律法规的所有规定，并对以任何方式使用您的密码和您的帐号使用本服务的任何行为及其结果承担全部责任。如您的行为违反国家法律和法规的任何规定，有可能构成犯罪的，将被追究刑事责任，并由您承担全部法律责任。 同时如果我方有理由认为您的任何行为，包括但不限于您的任何言论和其它行为违反或可能违反国家法律和法规的任何规定，我方可在任何时候不经任何事先通知终止向您提供服务。
        \n<b>3.注册义务</b>
        \n\t为了能使用本服务，您同意以下事项：依本服务注册提示请您填写正确的注册邮箱、密码，并确保今后更新的登陆邮箱、头像等资料的有效性和合法性。若您提供任何违法、不道德或我方认为不适合在我方上展示的资料；或者我方有理由怀疑你的资料属于程序或恶意操作，我方有权暂停或终止您的帐号及服务，并拒绝您于现在和未来使用本服务之全部或任何部分。
        我方无须对任何用户的任何登记资料承担任何责任，包括但不限于鉴别、核实任何登记资料的真实性、正确性、完整性、适用性及/或是否为最新资料的责任。
        \n<b>4.用户帐号、密码及安全</b>
        \n\t完成本服务的注册程序并成功注册之后，您可使用您的用户名和密码，登陆到您在本APP的帐号（下称“帐号”）。保护您的帐号安全，是您的责任与义务。
        \n\t您应对所有使用您的密码及帐号的活动负完全的责任。您同意：
        \n\t 1）您的我方帐号遭到未获授权的使用，或者发生其它任何安全问题时，您将立即通我方；
        \n\t 2）如果您为保管好自己的帐号和密码，因此而产生的任何损失或损害，我方无法也不承担热和责任；
        \n\t 3）每个用户都要对其帐号中的所有行为和事件负全责。如果您未保管好自己的帐号和密码而对您、我方或第三方造成的损害，您将负全部责任。
        \n<b>5.我方隐私权政策</b>
        \n\t您提供的登记资料及我方保留的有关您的若干其它资料将受到中国有关隐私的法律和我方小目标小行动APP隐私政策之规范。
        \n<b>6.提供者之责任</b>
        \n\t根据有关法律法规，我方在此郑重提请您注意，任何经由本服务而发布、上传的文字图片或其它资料（以下简称“内容 ”），无论系公开还是私下传送，均由内容提供者承担责任。我方仅为用户提供内容存储空间，无法控制经由本服务传送之内容，因此不保证内容的正确性、完整性或品质。您已预知使用本服务时，可能会接触到令人不快、不适当或令人厌恶之内容。在任何情况下，我方均不为任何内容负责，但我方有权依法停止传输任何前述内容并采取相应行动，包括但不限于暂停用户使用本服务的全部或部分，保存有关记录，并向有关机关报告。
        \n<b>7.用户行为</b>
        \n\t用户同意将不会利用本服务进行任何违法或不正当的活动，包括但不限于下列行为∶
        \n\t 1）发布或以其它方式传送含有下列内容之一的信息：
        \n\t • 反对宪法所确定的基本原则的；
        \n\t • 危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；
        \n\t • 损害国家荣誉和利益的；
        \n\t • 煽动民族仇恨、民族歧视、破坏民族团结的；
        \n\t • 破坏国家宗教政策，宣扬邪教和封建迷信的；
        \n\t • 散布谣言，扰乱社会秩序，破坏社会稳定的；
        \n\t • 散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的；
        \n\t • 侮辱或者诽谤他人，侵害他人合法权利的；
        \n\t • 含有虚假、诈骗、有害、胁迫、侵害他人隐私、骚扰、侵害、中伤、粗俗、猥亵、或其它道德上令人反感的内容；
        \n\t • 含有中国法律、法规、规章、条例以及任何具有法律效力之规范所限制或禁止的其它内容的；
        \n\t • 含有我方认为不适合在我方展示的内容；
        \n\t 2）以任何方式危害他人的合法权益；
        \n\t 3）冒充其他任何人或机构，或以虚伪不实的方式陈述或谎称与任何人或机构有关；
        \n\t 4）将依据任何法律或合约或法定关系（例如由于雇佣关系和依据保密合约所得知或揭露之内部资料、专属及机密资料）知悉但无权传送之任何内容加以发布、发送电子邮件或以其它方式传送；
        \n\t 5）将侵害他人著作权、专利权、商标权、商业秘密、或其它专属权利（以下简称“专属权利”）之内容加以发布或以其它方式传送；
        \n\t 6）将任何广告信函、促销资料、“垃圾邮件”、“滥发信件”、“连锁信件”、“直销”或其它任何形式的劝诱资料加以发布、发送或以其它方式传送；
        \n\t 7）将设计目的在于干扰、破坏或限制任何计算机软件、硬件或通讯设备功能之计算机病毒（包括但不限于木马程序（trojan horses）、蠕虫（worms）、定时炸弹、删除蝇（cancelbots）（以下简称“病毒”）或其它计算机代码、档案和程序之任何资料，加以发布、发送或以其它方式传送；
        \n\t 8）干扰或破坏本服务或与本服务相连线之服务器和网络，或违反任何关于本服务连线网络之规定、程序、政策或规范；
        \n\t 9）跟踪、人肉搜索或以其它方式骚扰他人；
        \n\t 10）故意或非故意地违反任何适用的当地、国家法律，以及任何具有法律效力的规则；
        \n\t 11）未经合法授权而截获、篡改、收集、储存或删除他人个人信息、站内邮件或其它数据资料，或将获知的此类资料用于任何非法或不正当目的。
        \n\t您已认可我方未对用户的使用行为进行全面控制，您使用任何内容时，包括依赖前述内容之正确性、完整性或实用性时，您同意将自行加以判断并承担所有风险，而不依赖于我方。但我方依其自行之考虑，拒绝和删除可经由本服务提供之违反本条款的或其它引起我方反感的任何内容。
        \n\t您了解并同意，我方依据法律法规的要求，或基于诚信为了以下目的或在合理必要范围内，认定必须将内容加以保存或揭露时，得加以保存或揭露：
        \n\t a）遵守法律程序；
        \n\t b）执行本使用协议；
        \n\t c）回应任何第三人提出的权利主张；
        \n\t d）保护我方、其用户及公众之权利、财产或个人安全；
        \n\t e）其它我方认为有必要的情况。
        \n<b>8. 国际使用之特别警告</b>
        \n\t您已了解国际互联网的无国界性，同意遵守当地所有关于网上行为及内容之法律法规。您特别同意遵守有关从中国或您所在国家或地区输出信息之传输的所有适用法律法规。
        \n<b>9.在我方发布的公开信息</b>
        \n\t 1）在本使用协议中，“本服务公开使用区域”系指一般公众可以使用的区域；
        \n\t 2）用户在我方上传或发布的公开内容，用户应保证其为著作权人或已取得合法授权，并且该内容不会侵犯任何第三方的合法权益，用户同意授予我方所有上述内容在全球范围内的免费、不可撤销的、永久的、可再许可或转让的独家使用权许可，据该许可我方将有权以展示、推广及其他不为我法律所禁止的方式使用前述内容。
        \n<b>10.赔偿</b>
        \n\t由于您通过本服务提供、发布或传送之内容、您与本服务连线、您违反本使用协议、或您侵害他人任何权利因而衍生或导致任何第三人提出任何索赔或请求，包括合理的律师费，您同意赔偿我方及其关联企业、高级职员、代理人、品牌共有人或其它合作伙伴及员工，并使其免受损害，并承担由此引发的全部法律责任。
        \n<b>11.关于使用及储存之一般措施</b>
        \n\t您同意不对本服务任何部分或本服务之使用或获得，进行复制、拷贝、出售、转售或用于任何其它商业目的。
        \n<b>12.关于使用及储存之一般措施</b>
        \n\t 1）在本使用协议中，“本服务公开使用区域”系指一般公众可以使用的区域；
        \n\t 2）用户在我方上传或发布的公开内容，用户应保证其为著作权人或已取得合法授权，并且该内容不会侵犯任何第三方的合法权益，用户同意授予我方所有上述内容在全球范围内的免费、不可撤销的、永久的、可再许可或转让的独家使用权许可，据该许可我方将有权以展示、推广及其他不为我法律所禁止的方式使用前述内容。
        \n<b>13.服务之修改</b>
        \n\t我方有权于任何时间暂时或永久修改或终止本服务（或其任何部分），且无论通知与否。您同意对于本服务所作的任何修改、暂停或终止，我方对您和任何第三人均无需承担任何责任。
        \n<b>14.终止服务</b>
        \n\t您同意我方基于其自行之考虑，因任何理由，包含但不限于缺乏使用，或我方认为您已经违反本使用协议的文字及精神，终止您的帐号或本服务之使用（或服务之任何部分），并将您在本服务内任何内容加以移除并删除。您同意依本使用协议任何规定提供之本服务，无需进行事先通知即可中断或终止，您承认并同意，我方可立即关闭或删除您的帐号及您帐号中所有相关信息及文件，及/或禁止继续使用前述文件或本服务。此外，您同意若本服务之使用被中断或终止或您的帐号及相关信息和文件被关闭或删除，我方对您或任何第三人均不承担任何责任。

        \n<b>15.我方之专属权利</b>
        \n\t您了解并同意，本服务及本服务所使用之相关软件（以下简称软件）含有受到相关知识产权及其它法律保护之专有保密资料。您也了解并同意，经由本服务或广告商向您呈现之赞助广告或信息所包含之内容，亦受到著作权、商标权、服务商标、专利权或其它专属权利之法律保护。未经我方或广告商明示授权，您不得修改、出租、出借、出售、散布本服务或软件之任何部份或全部，或据以制作衍生著作，或使用擅自修改后的软件，包括但不限于为了未经授权而使用本服务之目的。我方仅授予您个人、不可移转及非专属之使用权，使您得于单机计算机使用其软件之目的，但您不得（并不得允许任何第三人）复制、修改、创作衍生著作、进行还原工程、反向组译，或以其它方式发现原始码，或出售、转让、再授权或提供软件设定担保，或以其它方式移转软件之任何权利。您同意将通过由我方所提供的界面而非任何其它途径使用本服务。
        \n<b>16.担保与保证</b>
        \n\t您明确了解并同意∶
        \n\t 1）本使用协议的任何规定不会免除我方对造成您人身伤害的、或因故意或重大过失造成您财产损失的任何责任；
        \n\t 2）您使用本服务之风险由您个人负担。本服务系依“现状”及“现有”基础提供。我方对本服务不提供任何明示或默示的担保或保证，包含但不限于商业适售性、特定目的之适用性及未侵害他人权利等担保或保证；
        \n\t 3）我方不保证以下事项∶
        \n\t • 本服务将符合您的要求；
        \n\t • 本服务将不受干扰、及时提供、安全可靠或不会出错；
        \n\t • 使用本服务取得之结果正确可靠；
        \n\t • 您经由本服务购买或取得之任何产品、服务、资讯或其它信息将符合您的期望；
        \n\t 4）是否使用本服务下载或取得任何资料应由您自行考虑且自负风险，因任何资料之下载而导致的您电脑系统之任何损坏或数据流失等后果，由您自行承担；
        \n\t 5）您自我方或经由本服务取得的任何建议或信息，无论是书面或口头形式，除非本使用协议有明确规定，将不构成本使用协议以外之任何保证。
        \n<b>17.责任限制</b>
        \n\t您明确了解并同意，基于以下原因而造成的，包括但不限于利润、信誉、应用、数据损失或其它无形损失，我方不承担任何直接、间接、附带、特别、衍生性或惩罚性赔偿责任：
        \n\t 1）本服务之使用或无法使用；
        \n\t 2）为替换从或通过本服务购买或取得之任何商品、数据、信息、服务，收到的讯息，或缔结之交易而发生的成本；
        \n\t 3）您的传输或数据遭到未获授权的存取或改变；
        \n\t 4）任何第三方在本服务中所作之声明或行为；
        \n\t 5）与本服务相关的其它事宜，但本使用协议有明确规定的除外；
        \n\t 6）第三方以任何方式发布或投递欺诈性信息，或诱导用户受到经济损失，我方不承担任何责任。

        \n<b>17.责任限制</b>
        \n\t我方尊重他人知识产权，呼吁用户也要同样尊重知识产权。
        \n\t我方之服务与资料是基于“现状”提供，而且我方明确地表示拒绝对于“服务”、“资料”或“产品”给予任何明示或暗示之保证，包括但不限于，得为商业使用或适合于特定目的之保证。我方对于因“服务”、“资料”或“产品”所生之任何直接、间接、附带的或因此而导致之衍生性损失概不负责。
        \n\t如果您对他人的知识产权造成了侵害，我方将依国家法律法规的规定，或在适当的情形下，将依其服务条款或其相关规范性规定，删除特定内容或以至终止您对帐号的使用。
        \n\t我方尊重他人的任何权利（包括知识产权），同时也要求我们的使用者也尊重他人之权利。我方在适当情况下，得自行决定终止侵害或违反他人权利之使用者的帐号。
        \n\t若您认为您的作品的著作权遭到侵害或您的知识产权被侵犯，根据《信息网络传播权保护条例》的规定，您需及时向我方联系并提供详实的举证材料。或请到中华人民共和国国家版权局下载《要求删除或断开链接侵权网络内容的通知》（下称“删除通知”）的示范格式，如果您不明白“删除通知”的内容，请登录中华人民共和国国家版权局查看《要求删除或断开链接侵权网络内容的通知》填写说明。
        \n<b>19.一般条款</b>
        \n\t 1）本使用协议、APP隐私条款和免责声明构成您与我方之全部协议，并规范您对于本服务之使用行为。在您使用相关服务、使用第三方提供的内容或软件时，亦应遵从所适用之附加条款及条件；
        \n\t 2）本使用协议及您与我方之关系，均受到中华人民共和国法律管辖。您与我方就本服务、本使用协议或其它有关事项发生的争议，应首先友好协商解决，协商不成时应提请中国国际经济贸易仲裁委员会仲裁，仲裁裁决是终局性的，对双方均有约束力；
        \n\t 3）我方未行使或执行本使用协议任何权利或规定，不构成对前述权利或权利之放弃；
        \n\t 4）倘本使用协议之任何规定因与中华人民共和国法律抵触而无效，您依然同意应依照法律，努力使该规定所反映之当事人意向具备效力，且本使用协议其它规定仍应具有完整的效力及效果；
        \n\t 5）本使用协议之标题仅供方便而设，不具任何法律或契约效果；
        \n\t 6）我方对本使用协议享有最终解释权。
    </string>
    <string name="setting_question_head" translatable="false"><b>常见问题</b></string>
    <string name="setting_question_content" translatable="false">
        \n<b>一、下载</b>
        \n\n 1.如何下载APP
        \n a.请您登录官网http://123.207.36.58，点击产品下载菜单可下载最新安卓版本
        \n\n<b>二、注册</b>
        \n\n 1.接收不到验证码
        \n a.检查手机信号是否良好
        \n b.可能验证码发送较慢，切勿一直点击获取
        \n c.邮箱是否填写正确
        \n 2.同一手机号可以注册几次
        \n a.同一手机号只能注册一次
        \n\n<b>三、使用</b>
        \n\n 1. 界面显示错误
        \n a.推荐手机分辨率为1920x1080，其他分辨率比例界面可能存在问题，在调\n整手机字体大小时，可能会导致页面显示出现变形；
        \n b.因用户设置的特殊字体可能导致列表的字母条不显示；
        \n 2. app无法打开
        \n a.本系统支持android8.0及其以上版本的设备，其他版本的设备可能会存在闪退现象
        \n 3.我的数据存储在哪里
        \na.您的所有数据都存在您的手机本地存储中和线上服务器中。
        \n 5、为什么要将我的数据存在服务器上
        \na.为了方便记录您的手机使用情况，备份您的信息，方便您的使用，我们绝对不会向外人提供您的信息。
        \n 4.我怎么查看我的数据
        \na.您可以在app的日志界面中查看你的数据信息。
        \n\n<b>四、需要更多帮助？</b>
        \n\na.如果你仍然没有找到您问题的答案，请发邮件至1368936399@qq.com咨询。
        \n
    </string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
</resources>